test/bad/generators/generator04.px

func f(): Void... def
    yield
